--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </style>
 
 </head>
-<body>
+<body onload="initWebGL()">
 
 <!-- Water is linked with grass ! Grass is a certain height more than the water. Water is not totally opaque. -->
 <!-- Could do lowpoly mountains + grass and spheric water for a contrasted effect. -->
@@ -101,93 +101,50 @@
 
       </div>
 
-      <div class="col-md-10 full-height" style="background-color: #f8f8f8">
-
-        <div class="row">
-          <div class="container-fluid" style="background: black; padding: 20px;">
-            <p id="debug-infos" style="color: white">
-              Debug
-            </p>
-          </div>
-        </div>
-
-        <!-- Canvas will be there -->
-
-        <hr/>
-        <h3>class PlanetoSphere</h3>
-        <ul>
-          <li>name</li>
-          <li>radius</li>
-          <li>color/texture</li>
-          <li>lod</li>
-          <li>opacity</li>
-          <li>------</li>
-          <li>vertexBuffer</li>
-          <li>indexBuffer</li>
-          <li>colorBuffer</li>
-          <li>-------</li>
-          <li>x</li>
-          <li>y</li>
-          <li>z</li>
-          <li>mvMatrix</li>
-        </ul>
-
-        <hr/>
-        <h3>class Planet</h3>
-        <ul>
-          <li>name</li>
-          <li>array of planetosphere</li>
-        </ul>
-
-        <hr/>
-
-        <h3>class Universe</h3>
-        <ul>
-          <li>backgroundType</li>
-          <li>array of planetospheres</li>
-
-        </ul>
-
-        <hr/>
-
-        <h3>More fun</h3>
-        <p>Phong or Lambert Material, non brillant, Save as PNG (take a picture), fullscreen, share on social medias, system mode (planet orbits around yours), creating universe loading, save config</p>
-
-      <h3>The spheres</h3>
-      <ul>
-        <li>Grass</li>
-        <li>Water</li>
-        <li>Snow (challenge)</li>
-        <li>Atmosphere</li>
-        <li>what else?</li>
-      </ul>
-
-
+      <div class="col-md-10 full-height" id="canvas-zone" style="padding: 0px;">
+        <canvas id="canvas-universe" style="width: auto;"></canvas>
       </div>
+
     </div>
   </div>
 
+  <!-- debug infos is obsolete ! -->
+  <script src="js/gl-matrix-min.js"></script>
+  <script src="js/webGLTools.js"></script>
+  <script src="js/webGLDebug.js"></script>
+  <script src="js/tools.js"></script>
 
-  <script>
-
-    function updateDebugInfos(){
-
-        var universeReference = ["Lightroom", "Galaxy", "All Black", "Blue Sky", "Grandma's Sky"];
-        var ambianceReference = ["Earth Like", "Desert", "Oceanic", "Forest", "Random"];
-
-        var universeID = document.getElementById('universe').value;
-        var ambianceID = document.getElementById('ambiance').value;
-
-        console.log(universeReference[universeID]);
-        console.log(ambianceReference[ambianceID]);
-
-        document.getElementById('debug-infos').innerHTML = "> Universe : " + universeReference[universeID]
-    }
-
+    <!-- /////////////////\\\\\\\\\\\\\\\\ -->
+  <!-- //////////VERTEX SHADER\\\\\\\\\\ -->
+  <!-- /////////////////\\\\\\\\\\\\\\\\ -->
+  <script id="shader-vs" type="x-shader/x-vertex">
+      attribute vec3 aVertexPosition;
+      attribute vec4 aColor;
+      uniform mat4 uMVMatrix;
+      uniform mat4 uPMatrix;
+      varying vec4 vColor;
+      void main(void) {
+        vColor = aColor;
+        gl_Position = uPMatrix * uMVMatrix * vec4(aVertexPosition, 1.0);
+      }
   </script>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script>
+  <!-- //////////////////\\\\\\\\\\\\\\\\\ -->
+  <!-- //////////FRAGMENT SHADER\\\\\\\\\\ -->
+  <!-- //////////////////\\\\\\\\\\\\\\\\\ -->
+  <script id="shader-fs" type="x-shader/x-fragment">
+      #ifdef GL_ES
+        precision highp float;
+      #endif
+        varying vec4 vColor;
+      void main(void) {
+        gl_FragColor = vColor;
+      }
+  </script>
+  <script src="js/universe.js"></script>
+
+
+  <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script> -->
 
 
 </body>
