Code cleaning & refactoring

--- a/index.html
+++ b/index.html
@@ -177,7 +177,9 @@
         <!-- vertex shader -->
         <script id="shader-vs" type="x-shader/x-vertex">
 
-        //Quad attributes
+        const float PI = 3.14159; // Utilisé pour les calculs de Perlin Noise
+
+        // Attributs pour les formes
         attribute vec3 aVertexPosition;
         attribute vec4 aColor;
 
@@ -189,26 +191,23 @@
         uniform mat4 uPMatrix;
         uniform mat4 uNMatrix; // AFL
 
+        // For the per-vertex lighting
         uniform vec3 uAmbientColor; // AFL
         uniform vec3 uLightningDirection; // AFL
         uniform vec3 uDirectionalColor; // AFL
         uniform bool uUseLightning; // AFL
 
-        //Values sent to frag
-        varying vec3 vVertexPos;
-        varying vec4 vColor;
+        // Valeurs envoyées au fragment
+        varying vec3 vVertexPos;          // Position du vertex
+        varying vec4 vColor;              // Couleur
 
-        varying vec3 vNormal;
-        varying vec3 vLightWeighting;
+        varying vec3 vNormal;            // Normal
+        varying vec3 vLightWeighting;    // Lumière / intensité lumineuse finale
+        varying float noise;             // Bruit pour le vertex displacement (Perlin Noise)
 
-        //Getting timestamps
+        // Les timestamps
         uniform float uDeltaTime;
         uniform float uFullTime;
-
-
-        const float PI = 3.14159;
-
-
 
 
 
@@ -252,9 +251,6 @@
         /***********************************
         * End of Mathematical functions for quaternions
         ************************************/
-
-        // ASHIMA
-
         vec3 mod289(vec3 x)
         {
           return x - floor(x * (1.0 / 289.0)) * 289.0;
@@ -277,76 +273,6 @@
 
         vec3 fade(vec3 t) {
           return t*t*t*(t*(t*6.0-15.0)+10.0);
-        }
-
-        // Classic Perlin noise
-        float cnoise(vec3 P)
-        {
-          vec3 Pi0 = floor(P); // Integer part for indexing
-          vec3 Pi1 = Pi0 + vec3(1.0); // Integer part + 1
-          Pi0 = mod289(Pi0);
-          Pi1 = mod289(Pi1);
-          vec3 Pf0 = fract(P); // Fractional part for interpolation
-          vec3 Pf1 = Pf0 - vec3(1.0); // Fractional part - 1.0
-          vec4 ix = vec4(Pi0.x, Pi1.x, Pi0.x, Pi1.x);
-          vec4 iy = vec4(Pi0.yy, Pi1.yy);
-          vec4 iz0 = Pi0.zzzz;
-          vec4 iz1 = Pi1.zzzz;
-
-          vec4 ixy = permute(permute(ix) + iy);
-          vec4 ixy0 = permute(ixy + iz0);
-          vec4 ixy1 = permute(ixy + iz1);
-
-          vec4 gx0 = ixy0 * (1.0 / 7.0);
-          vec4 gy0 = fract(floor(gx0) * (1.0 / 7.0)) - 0.5;
-          gx0 = fract(gx0);
-          vec4 gz0 = vec4(0.5) - abs(gx0) - abs(gy0);
-          vec4 sz0 = step(gz0, vec4(0.0));
-          gx0 -= sz0 * (step(0.0, gx0) - 0.5);
-          gy0 -= sz0 * (step(0.0, gy0) - 0.5);
-
-          vec4 gx1 = ixy1 * (1.0 / 7.0);
-          vec4 gy1 = fract(floor(gx1) * (1.0 / 7.0)) - 0.5;
-          gx1 = fract(gx1);
-          vec4 gz1 = vec4(0.5) - abs(gx1) - abs(gy1);
-          vec4 sz1 = step(gz1, vec4(0.0));
-          gx1 -= sz1 * (step(0.0, gx1) - 0.5);
-          gy1 -= sz1 * (step(0.0, gy1) - 0.5);
-
-          vec3 g000 = vec3(gx0.x,gy0.x,gz0.x);
-          vec3 g100 = vec3(gx0.y,gy0.y,gz0.y);
-          vec3 g010 = vec3(gx0.z,gy0.z,gz0.z);
-          vec3 g110 = vec3(gx0.w,gy0.w,gz0.w);
-          vec3 g001 = vec3(gx1.x,gy1.x,gz1.x);
-          vec3 g101 = vec3(gx1.y,gy1.y,gz1.y);
-          vec3 g011 = vec3(gx1.z,gy1.z,gz1.z);
-          vec3 g111 = vec3(gx1.w,gy1.w,gz1.w);
-
-          vec4 norm0 = taylorInvSqrt(vec4(dot(g000, g000), dot(g010, g010), dot(g100, g100), dot(g110, g110)));
-          g000 *= norm0.x;
-          g010 *= norm0.y;
-          g100 *= norm0.z;
-          g110 *= norm0.w;
-          vec4 norm1 = taylorInvSqrt(vec4(dot(g001, g001), dot(g011, g011), dot(g101, g101), dot(g111, g111)));
-          g001 *= norm1.x;
-          g011 *= norm1.y;
-          g101 *= norm1.z;
-          g111 *= norm1.w;
-
-          float n000 = dot(g000, Pf0);
-          float n100 = dot(g100, vec3(Pf1.x, Pf0.yz));
-          float n010 = dot(g010, vec3(Pf0.x, Pf1.y, Pf0.z));
-          float n110 = dot(g110, vec3(Pf1.xy, Pf0.z));
-          float n001 = dot(g001, vec3(Pf0.xy, Pf1.z));
-          float n101 = dot(g101, vec3(Pf1.x, Pf0.y, Pf1.z));
-          float n011 = dot(g011, vec3(Pf0.x, Pf1.yz));
-          float n111 = dot(g111, Pf1);
-
-          vec3 fade_xyz = fade(Pf0);
-          vec4 n_z = mix(vec4(n000, n100, n010, n110), vec4(n001, n101, n011, n111), fade_xyz.z);
-          vec2 n_yz = mix(n_z.xy, n_z.zw, fade_xyz.y);
-          float n_xyz = mix(n_yz.x, n_yz.y, fade_xyz.x);
-          return 2.2 * n_xyz;
         }
 
         // Classic Perlin noise, periodic variant
@@ -419,17 +345,6 @@
           return 2.2 * n_xyz;
         }
 
-
-
-
-
-
-
-
-
-        // NOISE GENERATION
-        varying float noise;
-
         float turbulence( vec3 p ) {
           float w = 100.0;
           float t = -.5;
@@ -442,48 +357,49 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
         void main(void) {
-          //Setting the values sent to frag
-          vColor = aColor;
-          vVertexPos = aVertexPosition;
 
+          /*
+          * Valeurs envoyées au fragment
+          */
+
+          // Récupération de la couleur pour passage au fragment
+          vColor = aColor;
+          // Récupération de la position du vertex pour passage au fragment
+          vVertexPos = aVertexPosition;
+          // Calcul de la normale pour passage au fragment shader
+          vNormal = normalize(vec3(uNMatrix * vec4(aVertexNormal, 1.0)));
+          vLightWeighting = vNormal;
+
+          vec3 position = aVertexPosition;
+
+
+          // Création d'une turbulence 3D en utilisant la normale (turbulence en haute fréquence)
+          noise = 10.0 *  -.10 * turbulence( .5 * vNormal );
+          // Création d'une turbulence 3D en utilisant la position (turbulence en basse fréquence)
+          float b = 5.0 * pnoise( 0.05 * vVertexPos, vec3( 100.0 ) );
+          // Composition des turbulences
+          float displacement = - 4. * noise + b;
+
+          // La nouvelle position prenant en compte le vertex displacement
+          vec3 newPosition = vVertexPos + vNormal * displacement;
+
+
+          // Ftl
+          /*vec3 transformedNormal = vNormal;
+          float directionalLightWeighting = max(dot(transformedNormal, uLightningDirection), 0.0);
+          vLightWeighting = vNormal; // Here pass normal instead of light color */
+
+          // Rendu de la position finale des vecteurs dans le monde
+          gl_Position = uPMatrix * uMVMatrix * vec4(newPosition, 1.0);
+
+          // Could be useful some day
           //Handle the planet rotation on itself on y axis, (*) Make it work !
           //vec3 vertex = rotate_vertex_position(aVertexPosition, vec3(0.0, 1.0, 0.0), rotation * 360.0);
 
           //Handle the inclination of the earth on it's axis, (*) Make it work !
           //  vec3 position = rotate_vertex_position(vertex * radius, vec3(1.0, 0.0, 0.0), 90.0 - inclination);
-          vec3 position = aVertexPosition;
 
-          vNormal = normalize(vec3(uNMatrix * vec4(aVertexNormal, 1.0)));
-
-          // get a turbulent 3d noise using the normal, normal to high freq
-          noise = 10.0 *  -.10 * turbulence( .5 * vNormal );
-          // get a 3d noise using the position, low frequency
-          float b = 5.0 * pnoise( 0.05 * position, vec3( 100.0 ) );
-          // compose both noises
-          float displacement = - 4. * noise + b;
-
-          vec3 newPosition = position + vNormal * displacement;
-
-
-
-          // Ftl
-          vec3 transformedNormal = vNormal;
-          float directionalLightWeighting = max(dot(transformedNormal, uLightningDirection), 0.0);
-          vLightWeighting = vNormal; // Here pass normal instead of light color
-
-          //Rendering final positions of vertices in world
-          gl_Position = uPMatrix * uMVMatrix * vec4(newPosition, 1.0);
         }
 
         </script>
@@ -494,6 +410,8 @@
         #ifdef GL_ES
         precision highp float;
         #endif
+
+        // TODO: Test la longueur du vertex pour savoir si l'on colore en blanc ou pas (altitude neige)
 
         //Getting variables from vertex shader
         varying vec4 vColor;
@@ -509,7 +427,6 @@
         void main(void) {
           //gl_FragColor = vec4(vColor.rgb * vLightWeighting, 1.0);
           gl_FragColor = vec4(vLightWeighting, 1.0);
-
         }
 
         </script>
