State save, image save and full reset actions

--- a/index.html
+++ b/index.html
@@ -11,9 +11,36 @@
   h1{font-weight: 800;font-size: 6em;letter-spacing: -6px;margin-bottom: 0.2em;}
   p{font-size: 1.3em;font-weight: 800;}
   .positioned{position:absolute;top: 3%;left: 15%;}
+  * { box-sizing: border-box; }
+  .video-background {
+    background: #000;
+    position: fixed;
+    top: 0; right: 0; bottom: 0; left: 0;
+    z-index: -99;
+  }
+  .video-foreground,
+  .video-background iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+  }
+  #vidtop-content {
+  	top: 0;
+  	color: #fff;
+  }
   </style>
 </head>
 <body>
+
+  <div class="video-background">
+      <div class="video-foreground">
+        <iframe src="https://www.youtube.com/embed/W0LHTWG-UmQ?controls=0&showinfo=0&rel=0&autoplay=1&loop=1&playlist=W0LHTWG-UmQ" frameborder="0" allowfullscreen></iframe>
+      </div>
+    </div>
+
   <img src="./Assets/planete.png" class="positioned" />
   <div class="container text-center" style="margin-top: 15%;">
     <div class="col-md-8 col-md-offset-2">
